kubernetes-templates/nginx/0/apache-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apache-ingress-lb
spec:
  backend:
    serviceName: apache
    servicePort: 90
